--- a/openapi/templates/api.module.mustache
+++ b/openapi/templates/api.module.mustache
@@ -1,3 +1,4 @@
+{{>licenseInfo}}
 import { NgModule, ModuleWithProviders } from '@angular/core';
 import { Configuration } from './configuration';
 import { HttpClientModule } from '@angular/common/http';
