--- a/openapi/templates/api.service.mustache
+++ b/openapi/templates/api.service.mustache
@@ -1,3 +1,4 @@
+{{>licenseInfo}}
 import { Inject, Injectable, Optional } from '@angular/core';
 import { HttpClient, HttpHeaders, HttpParams,
          HttpResponse, HttpEvent, HttpParameterCodec{{#httpContextInOptions}}, HttpContext {{/httpContextInOptions}}
