--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,32 +1,2 @@
-<h1>Hello: {{message}}</h1>
-<h2>List of Employees</h2>
-<ng-container *ngFor="let employee of employees">
-    <h3>{{employee.id}}: {{employee.name}} (is {{employee.position}} at {{employee.department}} and earns {{employee.salary}})</h3>
-</ng-container>
-
-<div>
-    <h2>Update Employee</h2>
-    <form>
-        <div>
-            <label for="id">Id:</label>
-            <input type="text" id="id" name="id" [(ngModel)]="employee.id" required>
-        </div>
-        <div>
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" [(ngModel)]="employee.name" required>
-        </div>
-        <div>
-            <label for="department">Department:</label>
-            <input type="text" id="department" name="department" [(ngModel)]="employee.department" required>
-        </div>
-        <div>
-            <label for="position">Position:</label>
-            <input type="text" id="position" name="position" [(ngModel)]="employee.position" required>
-        </div>
-        <div>
-            <label for="salary">Salary:</label>
-            <input type="number" id="salary" name="salary" [(ngModel)]="employee.salary" step="0.01" required>
-        </div>
-        <button (click)="updateEmployee()">Update</button>
-    </form>
-</div>
+<h1>OpenApi Demo Application</h1>
+<router-outlet></router-outlet>
